# ikepono

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  LICENSE.txt  Makefile  README.md  app.py  original_requirements.txt  pipreqs-requirements.txt  poetry_tree.txt  pyproject.toml  requirements-ikepono-gpu-from-history.txt  requirements-ikepono-gpu-from-history.yml  requirements-ikepono-gpu.txt  requirements-ikepono-gpu.yml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-Detectron Smoke Test.ipynb
reports/: hackathon.md
src/ikepono/: Configuration.py  HardTripletSampler.py  ImageDataset.py  LabeledImageVector.py  ReidentifyModel.py  SplittableImageDataset.py  VectorStore.py  __about__.py  __init__.py  buildtrainvalidatedirectories.py  configuration.py  hardtripletsampler.py  indexedimagetensor.py  labeledimagedataset.py  labeledimageembedding.py  ptml_configuration.json  ptml_train.py  reidentifier.py  reidentifier_train_configuration.json  reidentifymodel.py  splittableimagedataset.py  train_main.py  vectorstore.py
src/scratch/: 01-default-weights-segmentation.py  buildtrainvalidatedirectories.py  identify_inbox_skeleton.py  plot.ipynb  ptml_mnist.ipynb  test_ptml.py  torch_device.py  train_skeleton.py  validate_training_data_images.py
src/scratch/PytorchFineTuningObjectDetection/: PennFudanDataset.py  coco_eval.py  engine.py  train.py  utils.py
tests/: DatasetTests.py  ReidentifyModelTests.py  SplittableImageDatasetTests.py  reidentifier_train_configuration.json  test_VectorStore.py  test_configuration.json  test_configuration.py  test_hardtripletsampler.py  test_labeledimagedataset.py  test_reidentifier.py  test_reidentifymodel.py  test_splittableimagedataset.py  test_vectorstore.py
