[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ikepono"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = "==3.11.*"
license = "MIT"
keywords = []
authors = [
  { name = "lobrien", email = "lobrien@knowing.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "torch>=2.3.1",
  "jupyterlab",
  "jupytext",
  "nbconvert",
  "pytorch-metric-learning",
  "azure-core",
  "azure-cli",
  "scikit-learn",
  "mlflow",
  #"pycotools"
]

[tool.hatch.envs.default]
python = "3.11"

[project.urls]
Documentation = "https://github.com/lobrien/ikepono#readme"
Issues = "https://github.com/lobrien/ikepono/issues"
Source = "https://github.com/lobrien/ikepono"

[tool.hatch.version]
path = "src/ikepono/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ikepono tests}"

[tool.coverage.run]
source_pkgs = ["ikepono", "tests"]
branch = true
parallel = true
omit = [
  "src/ikepono/__about__.py",
]

[tool.coverage.paths]
ikepono = ["src/ikepono", "*/ikepono/src/ikepono"]
tests = ["tests", "*/ikepono/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
